--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
 
 
 /* ---- typography ---- */
+h1{
+  text-align: center;
+  padding: 30px;
+}
 
 
 /* ---- layout ---- */
@@ -99,32 +103,25 @@ body {
 	100% {margin-left: -300%;}
 }
 /*----Section testimonials----*/
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: "Helvetica", sans-serif;
-}
 
 img {
   max-width: 100%;
 }
 
 .slider-container{
-  height: 100%;
-  width: 100%;
+  height: 100px;
+  width: 50%;
   position: relative;
   overflow: hidden; 
-  text-align: center;
+  margin: 0 auto;
 }
 
 .menu {
   position: absolute;
-  left: 0;
   z-index: 900;
   width: 100%;
   bottom: 0;
+  left: 40%;
 }
 
 .menu label {
@@ -134,10 +131,7 @@ img {
   height: 16px;
   background: #fff;
   border-radius: 50px;
-  margin: 0 .2em 1em;
-  &:hover {
-    background: red;
-  }
+
 }
 
 .slide {
@@ -172,5 +166,20 @@ img {
 /* ---- footer ---- */
 
 /* ---- components ---- */
+.companies {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 30px;
+
+}
+.logo{
+  width: 50%;
+  list-style: none;
+  flex: 1;
+}
+.logo img {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr 1fr 1fr;
+}
 /* ---- css shame ---- */
 
