--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
 h1{
   text-align: center;
   padding: 30px;
+  font-size: 26pt;
+}
+header a {
+  text-decoration: none;
+  font-size: 12px;
+  padding-left: 20%;
 }
 
 
@@ -64,15 +70,28 @@ h1{
   list-style-type: none;
   color: rgb(50, 50, 50);
 }
+/*------Nav Bar-----*/
+header img {
+  width: 100%;
+}
+nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+  position: fixed;
+
+}
+
+
 
 /*------Banner-----*/
-.slider {
-	width: 95%;
+.slider-banner {
+  width: 95%;
 	margin: auto;
 	overflow: hidden;
 }
 
-.slider ul {
+.slider-banner ul {
 	display: flex;
 	padding: 0;
 	width: 400%;
@@ -80,13 +99,13 @@ h1{
 	animation: cambio 20s infinite alternate linear;
 }
 
-.slider li {
-	width: 100%;
+.slider-banner li {
+  width: 100%;
 	list-style: none;
 }
 
-.slider img {
-	width: 100%;
+.slider-banner img {
+  width: 100%;
 }
 
 @keyframes cambio {
@@ -108,7 +127,7 @@ img {
   max-width: 100%;
 }
 
-.slider-container{
+.slider{
   height: 100px;
   width: 50%;
   position: relative;
@@ -131,7 +150,7 @@ img {
   height: 16px;
   background: #fff;
   border-radius: 50px;
-
+  
 }
 
 .slide {
@@ -170,7 +189,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   padding: 30px;
-
+  
 }
 .logo{
   width: 50%;
