--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* ---- reset ---- */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 html {
   box-sizing: border-box;
@@ -24,7 +25,10 @@ header a {
   font-size: 12px;
   padding-left: 20%;
 }
-
+*{
+  font-family: 'Montserrat', sans-serif;
+ 
+}
 
 /* ---- layout ---- */
 
@@ -85,42 +89,11 @@ nav {
 
 
 /*------Banner-----*/
-.slider-banner {
-  width: 95%;
-    margin: auto;
-    overflow: hidden;
-}
 
-.slider-banner ul {
-    display: flex;
-    padding: 0;
-    width: 400%;
-    
-    animation: cambio 20s infinite alternate linear;
-}
-
-.slider-banner li {
-  width: 100%;
-    list-style: none;
-}
-
-.slider-banner img {
+.banner img{
   width: 100%;
 }
 
-@keyframes cambio {
-    0% {margin-left: 0;}
-    20% {margin-left: 0;}
-    
-    25% {margin-left: -100%;}
-    45% {margin-left: -100%;}
-    
-    50% {margin-left: -200%;}
-    70% {margin-left: -200%;}
-    
-    75% {margin-left: -300%;}
-    100% {margin-left: -300%;}
-}
 /*----Section testimonials----*/
 
 img {
@@ -140,16 +113,17 @@ img {
   z-index: 900;
   width: 100%;
   bottom: 0;
-  left: 40%;
+  left: 30%;
 }
 
 .menu label {
   cursor: pointer;
   display: inline-block;
-  width: 16px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
   background: #fff;
   border-radius: 50px;
+  background: #99743D;
   
 }
 
@@ -173,16 +147,40 @@ img {
 }
 
 .slide-1 {
-  background-image: url("https://source.unsplash.com/t7YycgAoVSw/1600x900");
+  background-image: url("img/Review\ 1.png");
 }
 .slide-2 {
-  background-image: url("https://source.unsplash.com/11H1SSVcIxc/1600x900");
+  background-image: url("img/Review\ 2.png");
 }
 .slide-3 {
-  background-image: url("https://source.unsplash.com/OlZ1nWLEEgM/1600x900");
+  background-image: url("img/Review\ 3.png");
 }
 
 /* ---- footer ---- */
+.address p{
+  font-size: 10px;
+  margin: 0 0;
+ }
+ .social img {
+   width: 20%;
+   margin-left:40px;
+ }
+ 
+ .language{
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+ }
+ 
+ .language img{
+  width:30px;
+  margin-right: 30px;
+ }
+ .media-box{
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+
+ }
 
 /* ---- components ---- */
 .companies {
@@ -199,6 +197,17 @@ img {
 .logo img {
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr 1fr 1fr;
+}
+button {
+  padding: 15px 50px;
+  margin-left:30%;
+  background-color: #e88706;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10px;
+  position: relative;
+  bottom: 10px;
 }
 /* ---- css shame ---- */
 
@@ -235,3 +244,39 @@ img {
   width: 100px;
   height: 100px;
 }
+.how-it-works{
+  text-align: center;
+}
+
+.service-box{
+  /* margin-bottom: 20px; */
+  padding-top: 20px;
+  border: 2px solid#eee;
+  border-radius: 20px;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px 0 #eee;
+  margin: 5px; 
+  margin-left: 5%;
+  width: 90%;
+
+ 
+  display: flex;
+  /* justify-content: space-around;
+  grid-template-columns: 1fr 1fr 1fr; */
+}
+ 
+.service-box .left{
+
+  align-content: center; 
+  width: 40% auto;
+ 
+}
+
+.service-box .right{  
+  align-content: center; 
+  width: 40% auto;
+  margin:20px;
+  padding: 15px;
+  
+  
+} 
